--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="site-heading">
                         <h1>Jackson Kong</h1>
                         <!--<hr class="small">-->
-                        <span class="subheading">武昌理工学院</span>
+                        <span class="subheading">Stacksoft.com</span>
                     </div>
                 
 
@@ -113,7 +113,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Your Title</a>
+            <a class="navbar-brand" href="/">Title</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
