--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="site-heading">
                         <h1>Jackson Kong</h1>
                         <!--<hr class="small">-->
-                        <span class="subheading">Stacksoft.com</span>
+                        <span class="subheading">stacksoft.cn</span>
                     </div>
                 
 
