--- a/about/index.html
+++ b/about/index.html
@@ -209,8 +209,8 @@
             ">
             
                 <blockquote>
-<p>光有好奇心而不去實踐，等於自願放棄成功機會<br>
-別為自己畫地自限，Just Do It！！</p>
+<p>光有好奇心而不去实践，等于自愿放弃成功机会<br>
+别为自己画地自限，Just Do It！！</p>
 </blockquote>
 
 
