--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ I publish the whole project f......
                     <a target="_blank" href="https://www.instagram.com/jackson_kong97s/">
                         <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                            <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                         </span>
                     </a>
                 </li>
@@ -339,7 +339,7 @@ I publish the whole project f......
                     <a target="_blank" href="https://www.youtube.com/channel/UC8T9w6I5awFtQ9kygbG8cwQ">
                         <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                            <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                         </span>
                     </a>
                 </li>
@@ -406,7 +406,7 @@ I publish the whole project f......
                         <a target="_blank" href="https://www.instagram.com/jackson_kong97s/">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
@@ -428,7 +428,7 @@ I publish the whole project f......
                         <a target="_blank" href="https://www.youtube.com/channel/UC8T9w6I5awFtQ9kygbG8cwQ">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
