--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>
         
-          About - Beantech | 豆科技
+          About - Beantech |Jackson
         
     </title>
 
@@ -113,7 +113,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Your Title</a>
+            <a class="navbar-brand" href="/">Title</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
