--- a/play.html
+++ b/play.html
@@ -22,7 +22,7 @@
       <span>CUBE</span>
     </h1>
     <div class="text text--note">
-      双击即可开始
+      双击即可开始！
     </div>
     <div class="text text--timer">
       0:00
