--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
 
 <section>
     <!-- no hr -->
-    <h5><a href="/tags/">FEATURED TAGS</a></h5>
+    <h5><a href="/tags/">扫一扫关注我的公众号：Stacksoft</a></h5>
+	 <img id="wechat_gongzhonghao" src="/img/stacksoft.jpg">
     <div class="tags">
         
             
