--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 <section>
     <!-- no hr -->
     <h5><a href="/tags/">扫一扫关注我的公众号：Stacksoft</a></h5>
-	 <img id="wechat_gongzhonghao" src="/img/stacksoft.jpg">
+	 <img id="wechat_gongzhonghao" src="/img/stacksoft.png">
     <div class="tags">
         
             
