--- a/i4sbw.html
+++ b/i4sbw.html
@@ -11,7 +11,7 @@
 
 <!-- Styles -->
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style1.css">
 <link rel="stylesheet" type="text/css" href="css/media-query.css">
 <style>
 	.content{
