--- a/i4sbw.html
+++ b/i4sbw.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/style1.css">
 <link rel="stylesheet" type="text/css" href="css/media-query.css">
+<link rel="shortcut icon" href="images/index.jpg">
 <style>
 	.content{
 		color: #1D8446;
