--- a/i4sbw.html
+++ b/i4sbw.html
@@ -79,7 +79,7 @@
                         <p>其实为什么那么说呢，因为我真的很渴望很渴望有稳定的感情，而不是像小情侣一样谈恋爱，还天天因为各种小事而吵架。我真的太想要了，以前我只有羡慕的份儿。但我从来不敢开始，一是没有让自己心动的，二是觉得在一起也仅仅是谈恋爱，所以自己很没兴趣，甚至把接近我的定义为坏人，是来伤害我的。而你呢，首先是我自己一直以来的暗暗喜欢，当我向你要了微信后，（第二天写...瞬间接不上）你很直接的说出来，还有晚上我们的偶遇然后一起走（命运呐），就让关系很自然的走下去了。以及我们之间各种的兴趣相同和互补，从一开始我们说的最多的“我也是”，变成了“这也能对上？”。真的如同电影一样，这个对我而言对的人，就来了。</p>
                         <p>就如同题目一样，“尽我所能，爱我所爱”。我对你没有任何保留，我想到什么我就去为你做什么，毫无“止损”。因为两点，一是觉得你值得，觉得我们会走下去的。二是，我遇到了自己喜欢且十分十分满意的人，我想来一次真正的谈恋爱。而不是只有小时候的别人舔的相处。</p>
                         <p>你要相信天蝎的“认定一个人就会永远只会有这个人”，不管未来我们距离多远，我不可能随着时间变得不喜欢，更不会喜欢上身边的人，我知道自己想要的是什么，我想要踏实长久的爱情，而不是新鲜带来的快感。我很在乎我们在一起的时间，就像玩游戏升级一样，看着天数慢慢增加，自己很有成就感。等圣诞结束，我就把网站里圣诞的倒计时换成我们在一起的时间的正计时，这样随时打开看我们升级进度。</p>
-                        <p>做我女朋友吧，给你甜甜的恋爱。</p>
+                        <p>就做我女朋友吧，给你甜甜的恋爱。</p>
                         <br />
                        
                         <p></p>
