--- a/play.html
+++ b/play.html
@@ -18,8 +18,8 @@
 
   <div class="ui__texts">
     <h1 class="text text--title">
-      <span>THE</span>
-      <span>CUBE</span>
+
+      <span>魔方</span>
     </h1>
     <div class="text text--note">
       双击即可开始！
@@ -28,11 +28,11 @@
       0:00
     </div>
     <div class="text text--complete">
-      <span>Complete!</span>
+      <span>完成!</span>
     </div>
     <div class="text text--best-time">
       <icon trophy></icon>
-      <span>Best Time!</span>
+      <span>最快时间!</span>
     </div>
   </div>
 
