--- a/xx.html
+++ b/xx.html
@@ -4,12 +4,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 
 
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>圣诞快乐</title>
-		<link rel="stylesheet" type="text/css" href="static/css/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="static/css/default.css">
-	<link href="static/css/main.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/default.css">
+	<link href="css/main.css" rel="stylesheet">
 	<style type="text/css">
 		 /* code for animated blinking cursor */
 	        .typed-cursor{
@@ -147,7 +146,7 @@
 	            <div id="typed-strings" style="display: none; text-align:center; ">
  <p></p>
 	                <p><br/><br/>圣诞老爷爷🎅<br/>昨天偷偷告诉我 <br/>你就是我的礼物🎊<br/>🔔 🍎 🎊 ℳᴇʀʀᎽ🎅 ྀིℂʜʀɪsᴛᴍᴀs🎄🍬</p>
-<!--<img src="static/picture/3.jpg" style="max-width:100%">-->
+<!--<img src="picture/3.jpg" style="max-width:100%">-->
 
 	            </div>
 	            <span id="typed" style="white-space:pre;   "></span>
@@ -157,7 +156,7 @@
 		
 	<!--</div>-->
 	</div>
-	<script type="text/javascript" defer="" async="" src="static/js/uaest.js"></script><script src="static/js/typed.js" type="text/javascript"></script>
+	<script type="text/javascript" defer="" async="" src="js/uaest.js"></script><script src="js/typed.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		document.addEventListener('DOMContentLoaded', function(){
 
@@ -203,9 +202,9 @@
 <!--</script>-->
 	
 	
-<script src="static/js/jquery.min.js" type="text/javascript"></script>
-<script>window.jQuery || document.write('<script src="static/js/jquery-1.11.0.min.js"><\/script>')</script>
-	<script type="text/javascript" src="static/js/websnowjq.js"></script>
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
+	<script type="text/javascript" src="js/websnowjq.js"></script>
 	<script type="text/javascript">
 	$(function(){
 		$("#divSnow-1").websnowjq();
