--- a/xx.html
+++ b/xx.html
@@ -72,12 +72,12 @@
  </head>
 <body onclick="bodyPlayMusic()">
 <img id="music_ico"  onclick="clickMusic()"  alt=""  style=" display: inline; float: right;  " >
-<audio id="audio"  src="https://sf6-cdn-tos.douyinstatic.com/obj/ies-music/6905357668872063752.mp3" preload="auto" loop="loop" ></audio>
+<!--<audio id="audio"  src="https://sf6-cdn-tos.douyinstatic.com/obj/ies-music/6905357668872063752.mp3" preload="auto" loop="loop" ></audio>-->
 
 
 
 
-     <!--<a href="https://mp.weixin.qq.com/s/eRlpwDhKvq9e1rIgM1YI7Q"   class="hide_buttom"   style="position: fixed;top: 4%;right: 10px;width: 40px;height: 40px;z-index: 999;background: #696969;border-radius: 50%;padding: 3.0px;text-align: center;color: #ffffff;text-decoration: none;   clear: both; line-height: 36px; 	margin:auto;   font-size: 15px;   ">制作</a>-->
+   
      
      
 
@@ -98,7 +98,7 @@
           <!--height: 40px;-->
           <!--z-index: 999;-->
           <!--background: #696969;-->
-          <!--border-radius: 50%;padding: 3.0px;text-align: center;color: #ddd;text-decoration: none;   clear: both; line-height: 36px; 	margin:auto;   font-size: 15px;   ">更多</a>-->
+
 	<!--<div class="htmleaf-container">-->
 		
 	<!--	<div class="wrap" style="margin:15px; margin-top:-15px;">-->
