--- a/xx.html
+++ b/xx.html
@@ -113,7 +113,7 @@
 	        <div class="type-wrap" style=" padding: 10px 35px 0px 0px; position: absolute; top: 0px;  left: 35px;  z-index: 500; color: #ffffff; font-size: 14px;    ">
 	            <div id="typed-strings" style="display: none; text-align:center; ">
  <p></p>
-	                <p><br/><br/>送旭旭一颗<br/>圣诞树🎄 </p>
+	                <p><br/><br/>送旭旭一棵<br/>圣诞树🎄 </p>
 <!--<img src="picture/3.jpg" style="max-width:100%">-->
 
 	            </div>
